<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/home_text_color_white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_tess"
        android:layout_width="200dp"
        android:visibility="gone"
        android:layout_height="@dimen/dimen_200" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/con_status"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/camera_gray_f4"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/home_text_color_white">


            <TextView
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_14"
                android:text="@string/i_text_identify"
                android:textColor="@color/home_text_color_black"
                android:textSize="@dimen/dimen_20" />

            <ImageView
                android:id="@+id/iv_back_success"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_88"
                android:background="@drawable/shape_re_success" />

            <ImageView
                android:id="@+id/iv_re_status"
                app:layout_constraintBottom_toBottomOf="@+id/iv_back_success"
                app:layout_constraintLeft_toLeftOf="@+id/iv_back_success"
                app:layout_constraintRight_toRightOf="@+id/iv_back_success"
                app:layout_constraintTop_toTopOf="@+id/iv_back_success"
                android:layout_width="@dimen/dimen_54"
                android:layout_height="@dimen/dimen_40"
                android:background="@mipmap/icon_re_success" />

            <ImageView
                android:id="@+id/iv_re_status_2"
                app:layout_constraintBottom_toBottomOf="@+id/iv_back_success"
                app:layout_constraintLeft_toLeftOf="@+id/iv_back_success"
                app:layout_constraintRight_toRightOf="@+id/iv_back_success"
                app:layout_constraintTop_toTopOf="@+id/iv_back_success"
                android:layout_width="@dimen/dimen_46"
                android:layout_height="@dimen/dimen_46"
                android:background="@mipmap/icon_re_failed"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_re_tip"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_back_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16"
                android:text="@string/i_text_identify_success"
                android:textColor="@color/home_text_color_black"
                android:textSize="@dimen/dimen_20" />

            <TextView
                android:id="@+id/tv_re_tip2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_back_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_48"
                android:layout_marginBottom="@dimen/dimen_28"
                android:text="@string/i_text_identify_finish"
                android:textColor="@color/camera_gray_ac"
                android:textSize="@dimen/dimen_16" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_54"
            android:layout_marginStart="@dimen/dimen_25"
            android:layout_marginTop="@dimen/dimen_280"
            android:layout_marginEnd="@dimen/dimen_25"
            android:background="@drawable/shape_button"
            android:onClick="finishBack"
            android:text="@string/i_button_back"
            android:textColor="@color/home_text_color_white"
            android:textSize="@dimen/dimen_16" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>