<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:background="@color/camera_black_40"
    android:orientation="vertical">


    <com.wotransfer.identify.view.CameraPreviewImplView
        android:id="@+id/camera_p"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:layout_width="@dimen/dimen_17"
        android:layout_height="@dimen/dimen_17"
        android:layout_marginStart="@dimen/dimen_14"
        android:layout_marginTop="@dimen/dimen_14"
        android:background="@mipmap/icon_re_failed"
        android:contentDescription="@string/close_photo"
        android:onClick="finishBack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_tip_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_56"
            android:gravity="center"
            android:text="@string/i_card_front"
            android:textColor="@color/home_text_color_white"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/tv_tip_way"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5"
            android:gravity="center"
            android:text="@string/i_card_way"
            android:textColor="@color/camera_gray_a7"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_tip_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_13"
            android:gravity="center"
            android:text="@string/i_card_tip"
            android:textColor="@color/home_text_color_white"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <RelativeLayout
        style="@style/style_hw"
        android:background="@color/camera_black_40"
        android:layout_height="@dimen/dimen_140"
        android:layout_gravity="bottom">

        <RelativeLayout
            android:id="@+id/rl_sd_photo"
            android:layout_width="@dimen/dimen_40"
            android:layout_height="@dimen/dimen_40"
            android:visibility="invisible"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dimen_26"
            android:background="@drawable/shape_camera_take"
            android:onClick="changeTor">

            <ImageView
                android:layout_width="@dimen/dimen_26"
                android:layout_height="@dimen/dimen_26"
                android:layout_centerInParent="true"
                android:background="@mipmap/icon_camera_sd" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_get_photo"
            android:layout_width="@dimen/dimen_54"
            android:layout_height="@dimen/dimen_54"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dimen_26"
            android:background="@drawable/shape_camera_back"
            android:onClick="getPhoto"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/dimen_26"
                android:layout_height="@dimen/dimen_20"
                android:layout_centerInParent="true"
                android:background="@mipmap/icon_re_success" />
        </RelativeLayout>


        <ImageView
            android:id="@+id/iv_take"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/shape_take"
            android:onClick="startPhoto" />

        <ImageView
            android:id="@+id/iv_album"
            android:layout_width="@dimen/dimen_40"
            android:layout_height="@dimen/dimen_40"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dimen_26"
            android:background="@mipmap/icon_ablumn"
            android:onClick="startAlbum" />

        <RelativeLayout
            android:id="@+id/rl_cancel_photo"
            android:layout_width="@dimen/dimen_54"
            android:layout_height="@dimen/dimen_54"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dimen_26"
            android:background="@drawable/shape_camera_back"
            android:onClick="repeatPhoto"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/dimen_34"
                android:layout_height="@dimen/dimen_34"
                android:layout_centerInParent="true"
                android:background="@mipmap/icon_camera_back" />
        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>